# app/Http/Controllers/Api/KelolaRole.php
@@ -1,0 +1,357 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+use Yajra\DataTables\Facades\DataTables;
+use App\Models\m_role as Role;
+use OpenApi\Attributes as OA;
+use Illuminate\Support\Facades\Hash;
+
+class KelolaRole extends Controller
+{
+    #[OA\Schema(
+        schema: 'KelolaRoleRequest',
+        type: 'object',
+        properties: [
+            new OA\Property(property: 'search', type: 'string', example: '')
+        ]
+    )]
+
+    #[OA\Schema(
+        schema: 'KelolaRoleCreateRequest',
+        type: 'object',
+        properties: [
+            new OA\Property(property: 'role_nama', type: 'string', example: ''),
+        ]
+    )]
+
+    #[OA\Schema(
+        schema: 'KelolaRoleUpdateRequest',
+        type: 'object',
+        properties: [
+            new OA\Property(property: 'role_nama', type: 'string', example: '')
+        ],
+    )]
+
+    #[OA\Post(
+        path: '/api/kelola-role',
+        summary: 'Get list of roles',
+        description: 'Get list of roles with pagination and search',
+        tags: ['Kelola Role'],
+        security: [['cookieAuth' => ['jwtToken']]],
+        requestBody: new OA\RequestBody(
+            content: new OA\MediaType(
+                mediaType: 'application/json',
+                schema: new OA\Schema(ref: '#/components/schemas/KelolaRoleRequest')
+            )
+        ),
+        responses: [
+            new OA\Response(
+                response: '200',
+                description: 'Data berhasil diambil',
+                content: new OA\JsonContent(
+                    example: [
+                        'success' => true,
+                        'message' => 'Data berhasil diambil',
+                        'data' => 'data'
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: '401',
+                description: 'Unauthorized',
+                content: new OA\JsonContent(
+                    example: [
+                        'success' => false,
+                        'message' => 'Unauthorized'
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: '500',
+                description: 'Internal Server Error',
+                content: new OA\JsonContent(
+                    example: [
+                        'success' => false,
+                        'message' => 'Internal Server Error'
+                    ]
+                )
+            )
+        ]
+    )]
+
+
+    public function list(Request $request)
+    {
+        $query = Role::query();
+        $dataTotal = $query->count();
+
+        if ($request->role_nama != '') {
+            $query->where('role_nama', $request->role_nama);
+        }
+
+        if ($request->search != '') {
+            $query->where('role_nama', 'like', '%' . $request->search . '%');
+        }
+        
+        return response()->json(
+            [
+                'success' => true,
+                'message' => 'Data berhasil diambil',
+                'draw' => intval($request->input('draw')),
+                'recordsTotal' => $dataTotal,
+                'recordsFiltered' => $query->count(),
+                'data' => $query->get()
+            ]
+        );
+    }
+
+    #[OA\Get(
+        path: '/api/kelola-role/{id}',
+        summary: 'Get role detail',
+        description: 'Get role detail',
+        tags: ['Kelola Role'],
+        security: [['cookieAuth' => ['jwtToken']]],
+        parameters: [
+            new OA\Parameter(
+                name: 'id',
+                in: 'path',
+                required: true,
+                description: 'Role ID'
+            )
+        ],
+        responses: [
+            new OA\Response(
+                response: '200',
+                description: 'Data berhasil diambil',
+                content: new OA\JsonContent(
+                    example: [
+                        'success' => true,
+                        'message' => 'Data berhasil diambil',
+                        'data' => 'data'
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: '401',
+                description: 'Unauthorized',
+                content: new OA\JsonContent(
+                    example: [
+                        'success' => false,
+                        'message' => 'Unauthorized'
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: '500',
+                description: 'Internal Server Error',
+                content: new OA\JsonContent(
+                    example: [
+                        'success' => false,
+                        'message' => 'Internal Server Error'
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: '404',
+                description: 'User not found',
+                content: new OA\JsonContent(
+                    example: [
+                        'success' => false,
+                        'message' => 'User not found'
+                    ]
+                )
+            )
+        ]
+    )]
+
+
+    public function detail(Request $request)
+    {
+        $role = Role::find($request->id);
+        if (!$role) {
+            return response()->json([
+                'success' => false,
+                'message' => 'Role not found'
+            ], 404);
+        }
+        return response()->json([
+            'success' => true,
+            'message' => 'Data berhasil diambil',
+            'data' => $role
+        ]);
+    }
+
+    #[OA\Post(
+        path: '/api/kelola-role/create',
+        summary: 'Create role',
+        description: 'Create role',
+        tags: ['Kelola Role'],
+        security: [['cookieAuth' => ['jwtToken']]],
+        requestBody: new OA\RequestBody(
+            content: new OA\MediaType(
+                mediaType: 'application/json',
+                schema: new OA\Schema(ref: '#/components/schemas/KelolaRoleCreateRequest')
+            )
+        ),
+        responses: [
+            new OA\Response(
+                response: '200',
+                description: 'Data berhasil ditambahkan',
+                content: new OA\JsonContent(
+                    example: [
+                        'success' => true,
+                        'message' => 'Data berhasil ditambahkan',
+                        'data' => 'data'
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: '401',
+                description: 'Unauthorized',
+                content: new OA\JsonContent(
+                    example: [
+                        'success' => false,
+                        'message' => 'Unauthorized'
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: '500',
+                description: 'Internal Server Error',
+                content: new OA\JsonContent(
+                    example: [
+                        'success' => false,
+                        'message' => 'Internal Server Error'
+                    ]
+                )
+            )
+        ]
+    )]
+
+    public function create(Request $request)
+    {
+        $validatedData = $request->validate([
+            'role_nama' => 'required',
+        ]);
+        $role = Role::create($validatedData);
+        return response()->json([
+            'success' => true,
+            'message' => 'Data berhasil ditambahkan',
+            'data' => $role
+        ]);
+    }
+
+    #[OA\Put(
+        path: '/api/kelola-role/{id}',
+        summary: 'Update role',
+        description: 'Update role',
+        tags: ['Kelola Role'],
+        security: [['cookieAuth' => ['jwtToken']]],
+        parameters: [
+            new OA\Parameter(
+                name: 'id',
+                in: 'path',
+                required: true,
+                description: 'Role ID'
+            )
+        ],
+        requestBody: new OA\RequestBody(
+            content: new OA\MediaType(
+                mediaType: 'application/json',
+                schema: new OA\Schema(ref: '#/components/schemas/KelolaRoleUpdateRequest')
+            )
+        ),
+        responses: [
+            new OA\Response(
+                response: '200',
+                description: 'Data berhasil diubah',
+            ),
+            new OA\Response(
+                response: '401',
+                description: 'Unauthorized',
+            ),
+            new OA\Response(
+                response: '500',
+                description: 'Internal Server Error',
+            ),
+            new OA\Response(
+                response: '404',
+                description: 'User not found',
+            )
+        ]
+    )]
+
+    public function update(Request $request)
+    {
+        $validated = $request->validate([
+            'role_nama' => 'required',
+        ]);
+        $role = Role::find($request->id);
+        if (!$role) {
+            return response()->json([
+                'success' => false,
+                'message' => 'Role not found'
+            ], 404);
+        }
+        $role->update($validated);
+        $role->save();
+        return response()->json([
+            'success' => true,
+            'message' => 'Data berhasil diubah',
+            'data' => $role
+        ]);
+    }
+
+    #[OA\Delete(
+        path: '/api/kelola-role/{id}',
+        summary: 'Delete role',
+        description: 'Delete role',
+            tags: ['Kelola Role'],
+        security: [['cookieAuth' => ['jwtToken']]],
+        parameters: [
+            new OA\Parameter(
+                name: 'id',
+                in: 'path',
+                required: true,
+                description: 'User ID'
+            )
+        ],
+        responses: [
+            new OA\Response(
+                response: '200',
+                description: 'Data berhasil dihapus',
+            ),
+            new OA\Response(
+                response: '401',
+                description: 'Unauthorized',
+            ),
+            new OA\Response(
+                response: '500',
+                description: 'Internal Server Error',
+            ),
+            new OA\Response(
+                response: '404',
+                description: 'User not found',
+            )
+        ]
+    )]
+
+    public function delete(Request $request)
+    {
+        $role = Role::find($request->id);
+        if (!$role) {
+            return response()->json([
+                'success' => false,
+                'message' => 'Role not found'
+            ], 404);
+        }
+        $role->delete();
+        return response()->json([
+            'success' => true,
+            'message' => 'Data berhasil dihapus',
+        ]);
+    }
+}
